@@ -125,7 +125,7 @@ public class AdminRSSForm extends ActionForm {
                         // same ident (kuerzel)
                         Long id = null;
                         try {
-                            id = new Long(getInput(PARAM_ID + i));
+                            id = Long.valueOf(getInput(PARAM_ID + i));
                         } catch (Exception ex) {
                             if(log.isErrorEnabled()) {
                                 log.error("Error on validate.", ex);
