@@ -163,7 +163,7 @@ public class QueryPreProcessor {
         int startHit = 0;
         String stateStartHit = SearchState.getSearchStateObjectAsString(request, Settings.PARAM_STARTHIT_RANKED);
         if (stateStartHit.length() != 0) {
-            startHit = (new Integer(stateStartHit)).intValue();
+            startHit = (Integer.valueOf(stateStartHit)).intValue();
         }
 
         int currentPage = (startHit / Settings.SEARCH_RANKED_HITS_PER_PAGE) + 1;
@@ -254,7 +254,7 @@ public class QueryPreProcessor {
             int currentSelectorPage;
             try {
                 currentSelectorPage =
-                    (new Integer(request.getParameter(Settings.PARAM_CURRENT_SELECTOR_PAGE))).intValue();
+                    (Integer.valueOf(request.getParameter(Settings.PARAM_CURRENT_SELECTOR_PAGE))).intValue();
             } catch (Exception ex) {
                 currentSelectorPage = 1;
             }
